--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: index
 title: 
 ---
-Luck is what happens to you when fate gets tired of waiting...
+"Luck is what happens to you when fate gets tired of waiting" - Gregory David Roberts.
